0.7.0/_sources/autoapi/hklpy2/backends/th_tth_q/index.rst.txt
th_tth_q
========

.. py:module:: hklpy2.backends.th_tth_q

.. autoapi-nested-parse::

   Import: ``hklpy2.backends.th_tth_q``

   "th_tth" example solver in Python.

   Transformations between :math:`\theta,2\theta` and :math:`Q`.

   Example::

       import hklpy2
       SolverClass = hklpy2.get_solver("th_tth")
       solver = SolverClass()

   .. autosummary::

       ~ThTthSolver






Module Contents
---------------

.. py:data:: BISECTOR_MODE
   :value: 'bissector'


.. py:data:: TH_TTH_Q_GEOMETRY
   :value: 'TH TTH Q'


.. py:class:: ThTthSolver(geometry: str, **kwargs)

   .. container:: import-path

      Import: ``hklpy2.backends.th_tth_q.ThTthSolver``


   Bases: :py:obj:`hklpy2.backends.base.SolverBase`


   ``"th_tth"`` (any OS) :math:`\theta,2\theta` and :math:`Q`.

   ============== =================
   transformation equation
   ============== =================
   ``forward()``  :math:`\theta = \sin^{-1}(q\lambda / 4\pi)`
   ``inverse()``  :math:`q = (4\pi / \lambda) \sin(\theta)`
   ============== =================

   Wavelength is specified either directly (``solver.wavelength = 1.0``) or
   by adding at least one :index:`reflection` (see
   :class:`~hklpy2.blocks.reflection.Reflection`).  All
   reflections must have the same :index:`wavelength`.

   No orientation matrix is used in this geometry.

   New geometries can be added at runtime via
   :meth:`~hklpy2.backends.base.SolverBase.register_geometry`.

   .. rubric:: Python Methods

   .. autosummary::

       ~addReflection
       ~calculate_UB
       ~extra_axis_names
       ~forward
       ~geometries
       ~inverse
       ~pseudo_axis_names
       ~real_axis_names
       ~refineLattice
       ~removeAllReflections

   .. rubric:: Python Properties

   .. autosummary::

       ~geometry
       ~lattice
       ~mode
       ~modes
       ~sample


   .. py:method:: addReflection(value: ~hklpy2.backends.typing.ReflectionDict) -> None

      Add coordinates of a diffraction condition (a reflection).



   .. py:method:: calculate_UB(r1: ~hklpy2.backends.typing.ReflectionDict, r2: ~hklpy2.backends.typing.ReflectionDict) -> ~hklpy2.typing.Matrix3x3

      Calculate the UB (orientation) matrix with two reflections.

      The method of Busing & Levy, Acta Cryst 22 (1967) 457.

      .. rubric:: Implementation contract

      ``calculate_UB`` is the authoritative installer of its own
      orientation pair.  Every conformant implementation **must**
      execute these steps, in order:

      1. :meth:`removeAllReflections` -- discard any reflections
         previously stored in the solver-side sample state.
      2. :meth:`addReflection(r1) <addReflection>` -- install the
         first orientation reflection from the supplied dict.
      3. :meth:`addReflection(r2) <addReflection>` -- install the
         second orientation reflection from the supplied dict.
      4. Invoke the backend library's Busing & Levy routine on the
         freshly-installed pair to compute *UB*.
      5. Return *UB* as a 3x3 ``list[list[float]]``.

      The implementation **must not** assume that the solver's
      reflection list already contains ``r1`` and ``r2``.  The
      :class:`~hklpy2.ops.Core` layer pushes the python-side sample
      state via :meth:`update_solver` before invoking
      ``calculate_UB``, but ``calculate_UB`` itself is the
      authoritative installer of the orienting pair so that the
      result is reproducible from the supplied arguments alone.



   .. py:property:: extra_axis_names
      :type: List[str]


      Ordered list of any extra axis names (such as x, y, z).


   .. py:method:: forward(pseudos: ~hklpy2.typing.NamedFloatDict) -> List[~hklpy2.typing.NamedFloatDict]

      Transform pseudos to list of reals.



   .. py:method:: geometries() -> List[str]
      :classmethod:


      Sorted list of registered geometry names.



   .. py:method:: inverse(reals: ~hklpy2.typing.NamedFloatDict) -> ~hklpy2.typing.NamedFloatDict

      Transform reals to pseudos.



   .. py:property:: modes
      :type: List[str]


      List of the geometry operating modes.


   .. py:attribute:: name
      :value: 'th_tth'


      Name of this Solver.


   .. py:property:: pseudo_axis_names
      :type: List[str]


      Ordered list of the pseudo axis names (such as h, k, l).


   .. py:property:: real_axis_names
      :type: List[str]


      Ordered list of the real axis names (such as th, tth).


   .. py:method:: refineLattice(reflections: list[~hklpy2.backends.typing.ReflectionDict]) -> ~hklpy2.typing.NamedFloatDict | None

      No lattice refinement in this |solver|.



   .. py:method:: removeAllReflections() -> None

      Remove all reflections.



   .. py:attribute:: version

      Version of this Solver.


   .. py:property:: wavelength
      :type: float


      Diffractometer wavelength, for forward() and inverse().


